작품 상세 페이지 개발, 검색어 자동완성에 거래상태코드 별로 페이지 이동 다르게 설정, 나의 작품 소장품 등록시 컬러코드 추가, css a태그 -> label 변경, 딜 상세 페이지에 작가 프로필 사진 나오게 수정, 딜페이지, 아티스트 라이브러리 정렬 추가

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -3882,21 +3882,22 @@ display: none;}
   background-color: #999999;
 }
 .color-box{}
-.color-box a{width: 6rem;height: 6rem;display: inline-block;border-radius: 50%;margin-right: 1.2rem;position: relative;}
-.color-box a:last-child{margin-right:0;}
-.color-box a.mc-1{background: linear-gradient(#ff0101, #ff7519, #ffcc19, #b1ff19, #19fff7, #3065b4, #9426c7);}
-.color-box a.mc-2{background:#e24537;}
-.color-box a.mc-3{background:#fe793d;}
-.color-box a.mc-4{background:#fdd03b;}
-.color-box a.mc-5{background:#6eae30;}
-.color-box a.mc-6{background:#75d3fe;}
-.color-box a.mc-7{background:#3b97f5;}
-.color-box a.mc-8{background:#935de0;}
-.color-box a.mc-9{background:#b66d3e;}
-.color-box a.mc-10{background:#ffffff; border:#c7c7c7 1px solid}
-.color-box a.mc-11{background:#c7c7c7;}
+.color-box label{width: 6rem;height: 6rem;display: inline-block;border-radius: 50%;margin-right: 1.2rem;position: relative;}
+.color-box label:last-child{margin-right:0;}
+.color-box label.mc-1{background: linear-gradient(#ff0101, #ff7519, #ffcc19, #b1ff19, #19fff7, #3065b4, #9426c7);}
+.color-box label.mc-2{background:#e24537;}
+.color-box label.mc-3{background:#fe793d;}
+.color-box label.mc-4{background:#fdd03b;}
+.color-box label.mc-5{background:#6eae30;}
+.color-box label.mc-6{background:#75d3fe;}
+.color-box label.mc-7{background:#3b97f5;}
+.color-box label.mc-8{background:#935de0;}
+.color-box label.mc-9{background:#b66d3e;}
+.color-box label.mc-10{background:#ffffff; border:#c7c7c7 1px solid}
+.color-box label.mc-11{background:#c7c7c7;}
+.color-box label.mc-12{background:#000000;}
 
-.color-box a.active:after{content:"";position: absolute;left: 0;top: 0;background-image: url('../img/mypage/icon-check.png');width: 3rem;height: 2rem;background-size: 3rem 2rem;left: 50%;top: 50%;transform: translate(-50%, -50%);}
+/*.color-box label.active:after{content:"";position: absolute;left: 0;top: 0;background-image: url('../img/mypage/icon-check.png');width: 3rem;height: 2rem;background-size: 3rem 2rem;left: 50%;top: 50%;transform: translate(-50%, -50%);}*/
 
 .key-box{
     margin-top: 10px;
