--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -319,7 +319,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div  >';
-				html += '<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img active" onclick="dealDetail('+ result[i].workSq +')">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;" >';
 				
@@ -398,7 +398,7 @@ function onload(sort, type){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on" onclick="workDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img sale" onclick="dealDetail('+ result[i].workSq +')">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
      			html += '			<h3>판매중</h3>';
@@ -433,7 +433,7 @@ function onload(sort, type){
 				html += '</div>';
 				
 				if(result[i].authSq == 2){
- 				html += '<div class="artist active" onclick="workDetail('+ result[i].workSq +')"><span>Artist</span></div>';
+ 				html += '<div class="artist active" onclick="dealDetail('+ result[i].workSq +')"><span>Artist</span></div>';
  				}
  				if(result[i].authSq == 1){
  				html += '<div class="artist"><span>Artist</span></div>';
@@ -451,7 +451,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
-				html += '<div class="item-div-img sold-3" onclick="workDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img sold-3" onclick="dealDetail('+ result[i].workSq +')">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '</div>';
@@ -494,7 +494,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
-				html += '<div class="item-div-img" onclick="javascript:fnModalAlert();">';
+				html += '<div class="item-div-img" onclick="workDetail('+ result[i].workSq +')">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
@@ -547,8 +547,12 @@ if(window.matchMedia('(min-width: 1537px)').matches) {
  }
 
 
-function workDetail(workSq){
+function dealDetail(workSq){
  	location.href="/bidding?workSq="+workSq;
+}
+
+function workDetail(workSq){
+ 	location.href="/workDetail?workSq="+workSq;
 }
 
 $(document).on("click", ".heart", function(){
