--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -132,6 +132,7 @@
 											<input type="radio" id="mc-9" name="workClrCd" value="BROWN"><label for="mc-9" class="mc-9"></label>
 											<input type="radio" id="mc-10" name="workClrCd" value="WHITE"><label for="mc-10" class="mc-10"></label>
 											<input type="radio" id="mc-11" name="workClrCd" value="GRAY"><label for="mc-11" class="mc-11"></label>
+											<input type="radio" id="mc-12" name="workClrCd" value="BLACK"><label for="mc-12" class="mc-12"></label>
 										</div>
 									</td>
 								</tr>
