--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -39,7 +39,11 @@
 					</div>
 					<div class="baeg-right">
 						<div class="be-title">
-							<h2 th:text="${result.deal.artstActvtyNm}"></h2>
+							<th:block th:if="${not #strings.isEmpty(result.artistInfo.artstEnglsNm)}">
+								<h2 th:text="${result.artistInfo.artstActvtyNm}"></h2>
+								<h2 th:text="'('+${result.artistInfo.artstEnglsNm}+')'"></h2>
+							</th:block>
+							<h2 th:if="${#strings.isEmpty(result.artistInfo.artstEnglsNm)}" th:text="${result.artistInfo.artstActvtyNm}"></h2>
 							<h3 th:text="${result.deal.workNm}"></h3>
 							
 <!-- 							<a href="#" class="phos" data-toggle="modal" data-target="#myModal3"> -->
@@ -149,7 +153,7 @@
 							<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()"><span>응찰하기</span></button>
 							<button type="button" class="ba-btn2" onclick="javascript:fnModalAlert();"><img src="resources/img/de/mo/icon-1.jpg" /><span>공유하기</span></button>
 							<button type="button" class="ba-btn3" id="btn_history" data-toggle="modal" data-target="#myModal2"><img src="resources/img/de/mo/icon-2.jpg" /><span>응찰 히스토리</span></button>
-							<button type="button" class="ba-btn3" onclick="javascript:history.go(-2);"><span>뒤로 가기</span></button>
+							<button type="button" class="ba-btn3" onclick="javascript:history.go(-2);"><span>목록으로 돌아가기</span></button>
 							<div class="clearboth"></div>
 						</div>
 						
