--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -6,6 +6,11 @@
     	.swi-box::before{background-color:#f9f9f9;}
     	.footer-wrap{margin-top:0;}
     	.hd-div{background-color:#fff;}
+    	
+    	.modal-body {
+   			max-height: calc(100vh - 180px); 
+   			overflow-y: auto;
+   		}
     </style>
 </head>
 
@@ -49,7 +54,7 @@
 
 <!-- 모달검색 -->
 <!-- Modal -->
-<div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style=" width: auto;">
 	<div class="modal-dialog modal-baeg max-w1200">
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;">
@@ -74,8 +79,8 @@
 /* 파일업로드 */
 $(document).ready(function(){
   var fileTarget = $('.filebox .upload-hidden');
-
-    fileTarget.on('change', function(){
+  
+	fileTarget.on('change', function(){
         if(window.FileReader){
             var filename = $(this)[0].files[0].name;
         } else {
@@ -84,6 +89,9 @@ $(document).ready(function(){
 
         $(this).siblings('.upload-name').val(filename);
     });
+	
+	
+	
 }); 
 
 
@@ -147,6 +155,8 @@ $(document).ready(function(){
   * RETURN : MGZ9 상세
   */
   function selectMgz9Dtl(mgzSq){
+	  
+	  $("body").css("overflow", "hidden");
   	
   	$.ajax({
           type: "post",
